@@ -1,3 +1,12 @@
+2010-01-01 McCabe Maxsted  <hakushakukun@gmail.com>
+
+	* Automatically find new viewer skins and list them in preferences (Windows only).
+	
+	  modified:   linden/indra/newview/llpanelskins.cpp
+	  modified:   linden/indra/newview/llpanelskins.h
+	  modified:   linden/indra/newview/skins/default/xui/en-us/panel_preferences_skins.xml
+
+
 2009-12-31 McCabe Maxsted  <hakushakukun@gmail.com>
 
 	* Moved notify when L$ spent from Preferences > General to Preferences > Popups.
